objects/PRH_Collect__c.object
<CustomObject>
    <description>Le Cercle Iconic Platform Application Object</description>
    <fields>
        <fullName>PRH_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PRH_Collect_Last_Modified_Date__c</fullName>
        <inlineHelpText>If the Collect Last Modified Date value is an earlier date than the current collect period, this means the last collect modification was made in a previous collect</inlineHelpText>
        <label>Collect Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PRH_Full_Active_Le_Cercle_Portfolio__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Full Le Cercle</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PRH_Iconic_Account__c</fullName>
        <label>Iconic Account</label>
        <referenceTo>PRH_Luxury_Accounts__c</referenceTo>
        <relationshipName>Collects</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>PRH_Le_Cercle_Brand_Presence__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Ticked if there is at least one Le Cercle Brand presence checked in the collect</inlineHelpText>
        <label>Le Cercle Brand Presence</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PRH_Number_of_Pernod_Ricard_products__c</fullName>
        <label>Number of Pernod Ricard products</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PRH_Period_End__c</fullName>
        <label>Period End</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PRH_Period_Start__c</fullName>
        <label>Period Start</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>Collect</label>
    <nameField>
        <displayFormat>PRHC-{00000000}</displayFormat>
        <label>Collect Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Collects</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>